- Background Subtraction Code - Formatting Improvments - Pray my Git fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 OPENVCTesting - Myles/OPENVCTest/Video2.mp4
+SquashProject/SquashProject/CVideo 1080.mp4
+SquashProject/SquashProject/CVideo 720.mp4
