- Slight Format Changes - Optimized predictNextPosition

--- a/Jake/CapstoneVersion1/OpenCV3_Template/OpenCV3_Template.vcxproj
+++ b/Jake/CapstoneVersion1/OpenCV3_Template/OpenCV3_Template.vcxproj
@@ -74,6 +74,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\opencv\build\include;C:\opencv\build\include\opencv;C:\opencv\build\include\opencv2;</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64;C:\opencv\build\x64\vc15\lib;</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
